# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/features.gni")
import("//build/config/ui.gni")
import("//third_party/ffmpeg/ffmpeg_options.gni")
import("//xwalk/build/version.gni")
import("//xwalk/build/xwalk.gni")

group("xwalk_builder") {
  # In GN, When a target is marked "testonly = true", it must only be depended
  # on by other test-only targets. In crosswalk project we don't need to care
  # which targets are testonly. In order to group all targets into "xwalk_builder"
  # we just set testonly=true.
  testonly = true
  if (!is_android) {
    deps = [
      ":xwalk",
      ":xwalk_all_tests",
    ]
    if (is_win) {
      deps += [ ":generate_crosswalk_win_zip" ]
    }
  } else {
    deps = [
      # For internal testing.
      "app/android/runtime_client_embedded_shell:xwalk_runtime_client_embedded_shell_apk",
      "app/android/runtime_client_shell:xwalk_runtime_client_shell_apk",
      "runtime/android/core_internal_shell:xwalk_core_internal_shell_apk",
      "runtime/android/core_shell:xwalk_core_shell_apk",
      "test/android/core/javatests:xwalk_core_test_apk",
      "test/android/core_internal/javatests:xwalk_core_internal_test_apk",
      "test/android/runtime_client/javatests:xwalk_runtime_client_test_apk",
      "test/android/runtime_client_embedded/javatests:xwalk_runtime_client_embedded_test_apk",

      # For external testing.
      "app/android/app_hello_world:xwalk_app_hello_world_apk",
      "app/android/app_template:xwalk_app_template",
      "runtime/android/core:xwalk_core_library",
      "runtime/android/core:xwalk_core_library_documentation",
      "runtime/android/core:xwalk_core_library_pom_gen",
      "runtime/android/core:xwalk_shared_library",
      "runtime/android/core:xwalk_shared_library_pom_gen",
      "runtime/android/runtime_lib:xwalk_runtime_lib_apk",
      "runtime/android/runtime_lib:xwalk_runtime_lib_lzma_apk",
      "runtime/android/sample:xwalk_core_sample_apk",
    ]
  }
}

if (is_linux) {
  group("xwalk_installer") {
    testonly = true
    deps = [
      "//xwalk/tools/installer:xwalk_installer_linux_debian",
    ]
  }
}

executable("xwalk") {
  sources = [
    "runtime/app/xwalk_main.cc",
  ]
  deps = [
    ":xwalk_runtime",
  ]
  if (is_win) {
    configs -= [ "//build/config/win:console" ]
    configs += [ "//build/config/win:windowed" ]
    sources += [ "runtime/resources/xwalk.rc" ]
    deps += [
      "//base/allocator",
      "//content:sandbox_helper_win",
      "//xwalk/dotnet:xwalk_dotnet_bridge",
      "//xwalk/experimental/wifidirect:wifidirect_extension",
    ]
  }
}

source_set("xwalk_runtime") {
  sources = [
    "//extensions/common/constants.cc",
    "//extensions/common/constants.h",
    "//extensions/common/url_pattern.cc",
    "//extensions/common/url_pattern.h",
    "runtime/app/android/xwalk_main_delegate_android.cc",
    "runtime/app/android/xwalk_main_delegate_android.h",
    "runtime/app/xwalk_main_delegate.cc",
    "runtime/app/xwalk_main_delegate.h",
    "runtime/browser/android/cookie_manager.cc",
    "runtime/browser/android/cookie_manager.h",
    "runtime/browser/android/find_helper.cc",
    "runtime/browser/android/find_helper.h",
    "runtime/browser/android/net/android_protocol_handler.cc",
    "runtime/browser/android/net/android_protocol_handler.h",
    "runtime/browser/android/net/android_stream_reader_url_request_job.cc",
    "runtime/browser/android/net/android_stream_reader_url_request_job.h",
    "runtime/browser/android/net/init_native_callback.h",
    "runtime/browser/android/net/input_stream.h",
    "runtime/browser/android/net/input_stream_impl.cc",
    "runtime/browser/android/net/input_stream_impl.h",
    "runtime/browser/android/net/input_stream_reader.cc",
    "runtime/browser/android/net/input_stream_reader.h",
    "runtime/browser/android/net/url_constants.cc",
    "runtime/browser/android/net/url_constants.h",
    "runtime/browser/android/net/xwalk_cookie_store_wrapper.cc",
    "runtime/browser/android/net/xwalk_cookie_store_wrapper.h",
    "runtime/browser/android/net/xwalk_url_request_job_factory.cc",
    "runtime/browser/android/net/xwalk_url_request_job_factory.h",
    "runtime/browser/android/net_disk_cache_remover.cc",
    "runtime/browser/android/net_disk_cache_remover.h",
    "runtime/browser/android/renderer_host/xwalk_render_view_host_ext.cc",
    "runtime/browser/android/renderer_host/xwalk_render_view_host_ext.h",
    "runtime/browser/android/scoped_allow_wait_for_legacy_web_view_api.h",
    "runtime/browser/android/state_serializer.cc",
    "runtime/browser/android/state_serializer.h",
    "runtime/browser/android/xwalk_autofill_client_android.cc",
    "runtime/browser/android/xwalk_autofill_client_android.h",
    "runtime/browser/android/xwalk_content.cc",
    "runtime/browser/android/xwalk_content.h",
    "runtime/browser/android/xwalk_content_lifecycle_notifier.cc",
    "runtime/browser/android/xwalk_content_lifecycle_notifier.h",
    "runtime/browser/android/xwalk_contents_client_bridge.cc",
    "runtime/browser/android/xwalk_contents_client_bridge.h",
    "runtime/browser/android/xwalk_contents_client_bridge_base.cc",
    "runtime/browser/android/xwalk_contents_client_bridge_base.h",
    "runtime/browser/android/xwalk_contents_io_thread_client.h",
    "runtime/browser/android/xwalk_contents_io_thread_client_impl.cc",
    "runtime/browser/android/xwalk_contents_io_thread_client_impl.h",
    "runtime/browser/android/xwalk_cookie_access_policy.cc",
    "runtime/browser/android/xwalk_cookie_access_policy.h",
    "runtime/browser/android/xwalk_dev_tools_server.cc",
    "runtime/browser/android/xwalk_dev_tools_server.h",
    "runtime/browser/android/xwalk_form_database.cc",
    "runtime/browser/android/xwalk_form_database.h",
    "runtime/browser/android/xwalk_http_auth_handler.cc",
    "runtime/browser/android/xwalk_http_auth_handler.h",
    "runtime/browser/android/xwalk_http_auth_handler_base.cc",
    "runtime/browser/android/xwalk_http_auth_handler_base.h",
    "runtime/browser/android/xwalk_icon_helper.cc",
    "runtime/browser/android/xwalk_icon_helper.h",
    "runtime/browser/android/xwalk_login_delegate.cc",
    "runtime/browser/android/xwalk_login_delegate.h",
    "runtime/browser/android/xwalk_path_helper.cc",
    "runtime/browser/android/xwalk_path_helper.h",
    "runtime/browser/android/xwalk_presentation_host.cc",
    "runtime/browser/android/xwalk_presentation_host.h",
    "runtime/browser/android/xwalk_request_interceptor.cc",
    "runtime/browser/android/xwalk_request_interceptor.h",
    "runtime/browser/android/xwalk_settings.cc",
    "runtime/browser/android/xwalk_view_delegate.cc",
    "runtime/browser/android/xwalk_view_delegate.h",
    "runtime/browser/android/xwalk_web_contents_delegate.cc",
    "runtime/browser/android/xwalk_web_contents_delegate.h",
    "runtime/browser/android/xwalk_web_contents_view_delegate.cc",
    "runtime/browser/android/xwalk_web_contents_view_delegate.h",
    "runtime/browser/android/xwalk_web_resource_response.cc",
    "runtime/browser/android/xwalk_web_resource_response.h",
    "runtime/browser/android/xwalk_web_resource_response_impl.cc",
    "runtime/browser/android/xwalk_web_resource_response_impl.h",
    "runtime/browser/application_component.cc",
    "runtime/browser/application_component.h",
    "runtime/browser/devtools/remote_debugging_server.cc",
    "runtime/browser/devtools/remote_debugging_server.h",
    "runtime/browser/devtools/xwalk_devtools_manager_delegate.cc",
    "runtime/browser/devtools/xwalk_devtools_manager_delegate.h",
    "runtime/browser/geolocation/xwalk_access_token_store.cc",
    "runtime/browser/geolocation/xwalk_access_token_store.h",
    "runtime/browser/image_util.cc",
    "runtime/browser/image_util.h",
    "runtime/browser/media/media_capture_devices_dispatcher.cc",
    "runtime/browser/media/media_capture_devices_dispatcher.h",
    "runtime/browser/runtime.cc",
    "runtime/browser/runtime.h",
    "runtime/browser/runtime_download_manager_delegate.cc",
    "runtime/browser/runtime_download_manager_delegate.h",
    "runtime/browser/runtime_file_select_helper.cc",
    "runtime/browser/runtime_file_select_helper.h",
    "runtime/browser/runtime_geolocation_permission_context.cc",
    "runtime/browser/runtime_geolocation_permission_context.h",
    "runtime/browser/runtime_javascript_dialog_manager.cc",
    "runtime/browser/runtime_javascript_dialog_manager.h",
    "runtime/browser/runtime_network_delegate.cc",
    "runtime/browser/runtime_network_delegate.h",
    "runtime/browser/runtime_notification_permission_context.cc",
    "runtime/browser/runtime_notification_permission_context.h",
    "runtime/browser/runtime_platform_util.h",
    "runtime/browser/runtime_platform_util_android.cc",
    "runtime/browser/runtime_platform_util_linux.cc",
    "runtime/browser/runtime_platform_util_mac.mm",
    "runtime/browser/runtime_platform_util_win.cc",
    "runtime/browser/runtime_quota_permission_context.cc",
    "runtime/browser/runtime_quota_permission_context.h",
    "runtime/browser/runtime_resource_dispatcher_host_delegate.cc",
    "runtime/browser/runtime_resource_dispatcher_host_delegate.h",
    "runtime/browser/runtime_resource_dispatcher_host_delegate_android.cc",
    "runtime/browser/runtime_resource_dispatcher_host_delegate_android.h",
    "runtime/browser/runtime_select_file_policy.cc",
    "runtime/browser/runtime_select_file_policy.h",
    "runtime/browser/runtime_ui_delegate.cc",
    "runtime/browser/runtime_ui_delegate.h",
    "runtime/browser/runtime_url_request_context_getter.cc",
    "runtime/browser/runtime_url_request_context_getter.h",
    "runtime/browser/speech/speech_recognition_manager_delegate.cc",
    "runtime/browser/speech/speech_recognition_manager_delegate.h",
    "runtime/browser/ssl_error_page.cc",
    "runtime/browser/ssl_error_page.h",
    "runtime/browser/storage_component.cc",
    "runtime/browser/storage_component.h",
    "runtime/browser/sysapps_component.cc",
    "runtime/browser/sysapps_component.h",
    "runtime/browser/ui/color_chooser.cc",
    "runtime/browser/ui/color_chooser.h",
    "runtime/browser/ui/color_chooser_android.cc",
    "runtime/browser/ui/color_chooser_mac.cc",
    "runtime/browser/ui/desktop/exclusive_access_bubble.cc",
    "runtime/browser/ui/desktop/exclusive_access_bubble.h",
    "runtime/browser/ui/desktop/exclusive_access_bubble_views_context.h",
    "runtime/browser/ui/native_app_window.cc",
    "runtime/browser/ui/native_app_window.h",
    "runtime/browser/ui/native_app_window_android.cc",
    "runtime/browser/ui/native_app_window_mac.h",
    "runtime/browser/ui/native_app_window_mac.mm",
    "runtime/browser/wifidirect_component_win.cc",
    "runtime/browser/wifidirect_component_win.h",
    "runtime/browser/xwalk_app_extension_bridge.cc",
    "runtime/browser/xwalk_app_extension_bridge.h",
    "runtime/browser/xwalk_application_mac.h",
    "runtime/browser/xwalk_application_mac.mm",
    "runtime/browser/xwalk_autofill_client.cc",
    "runtime/browser/xwalk_autofill_client.h",
    "runtime/browser/xwalk_autofill_manager.cc",
    "runtime/browser/xwalk_autofill_manager.h",
    "runtime/browser/xwalk_browser_context.cc",
    "runtime/browser/xwalk_browser_context.h",
    "runtime/browser/xwalk_browser_main_parts.cc",
    "runtime/browser/xwalk_browser_main_parts.h",
    "runtime/browser/xwalk_browser_main_parts_android.cc",
    "runtime/browser/xwalk_browser_main_parts_android.h",
    "runtime/browser/xwalk_browser_main_parts_mac.h",
    "runtime/browser/xwalk_browser_main_parts_mac.mm",
    "runtime/browser/xwalk_component.h",
    "runtime/browser/xwalk_content_browser_client.cc",
    "runtime/browser/xwalk_content_browser_client.h",
    "runtime/browser/xwalk_content_settings.cc",
    "runtime/browser/xwalk_content_settings.h",
    "runtime/browser/xwalk_form_database_service.cc",
    "runtime/browser/xwalk_form_database_service.h",
    "runtime/browser/xwalk_notification_manager_linux.cc",
    "runtime/browser/xwalk_notification_manager_linux.h",
    "runtime/browser/xwalk_notification_manager_win.cc",
    "runtime/browser/xwalk_notification_manager_win.h",
    "runtime/browser/xwalk_notification_win.cc",
    "runtime/browser/xwalk_notification_win.h",
    "runtime/browser/xwalk_permission_manager.cc",
    "runtime/browser/xwalk_permission_manager.h",
    "runtime/browser/xwalk_platform_notification_service.cc",
    "runtime/browser/xwalk_platform_notification_service.h",
    "runtime/browser/xwalk_pref_store.cc",
    "runtime/browser/xwalk_pref_store.h",
    "runtime/browser/xwalk_presentation_service_delegate.cc",
    "runtime/browser/xwalk_presentation_service_delegate.h",
    "runtime/browser/xwalk_presentation_service_delegate_android.cc",
    "runtime/browser/xwalk_presentation_service_delegate_android.h",
    "runtime/browser/xwalk_presentation_service_delegate_win.cc",
    "runtime/browser/xwalk_presentation_service_delegate_win.h",
    "runtime/browser/xwalk_presentation_service_helper.cc",
    "runtime/browser/xwalk_presentation_service_helper.h",
    "runtime/browser/xwalk_presentation_service_helper_android.cc",
    "runtime/browser/xwalk_presentation_service_helper_android.h",
    "runtime/browser/xwalk_presentation_service_helper_win.cc",
    "runtime/browser/xwalk_presentation_service_helper_win.h",
    "runtime/browser/xwalk_render_message_filter.cc",
    "runtime/browser/xwalk_render_message_filter.h",
    "runtime/browser/xwalk_runner.cc",
    "runtime/browser/xwalk_runner.h",
    "runtime/browser/xwalk_runner_win.cc",
    "runtime/browser/xwalk_runner_win.h",
    "runtime/browser/xwalk_special_storage_policy.cc",
    "runtime/browser/xwalk_special_storage_policy.h",
    "runtime/browser/xwalk_ssl_host_state_delegate.cc",
    "runtime/browser/xwalk_ssl_host_state_delegate.h",
    "runtime/common/android/xwalk_globals_android.cc",
    "runtime/common/android/xwalk_globals_android.h",
    "runtime/common/android/xwalk_hit_test_data.cc",
    "runtime/common/android/xwalk_hit_test_data.h",
    "runtime/common/android/xwalk_message_generator.cc",
    "runtime/common/android/xwalk_message_generator.h",
    "runtime/common/android/xwalk_render_view_messages.cc",
    "runtime/common/android/xwalk_render_view_messages.h",
    "runtime/common/logging_xwalk.cc",
    "runtime/common/logging_xwalk.h",
    "runtime/common/paths_mac.h",
    "runtime/common/paths_mac.mm",
    "runtime/common/xwalk_common_message_generator.cc",
    "runtime/common/xwalk_common_message_generator.h",
    "runtime/common/xwalk_common_messages.cc",
    "runtime/common/xwalk_common_messages.h",
    "runtime/common/xwalk_content_client.cc",
    "runtime/common/xwalk_content_client.h",
    "runtime/common/xwalk_localized_error.cc",
    "runtime/common/xwalk_localized_error.h",
    "runtime/common/xwalk_paths.cc",
    "runtime/common/xwalk_paths.h",
    "runtime/common/xwalk_resource_delegate.cc",
    "runtime/common/xwalk_resource_delegate.h",
    "runtime/common/xwalk_runtime_features.cc",
    "runtime/common/xwalk_runtime_features.h",
    "runtime/common/xwalk_switches.cc",
    "runtime/common/xwalk_switches.h",
    "runtime/common/xwalk_system_locale.cc",
    "runtime/common/xwalk_system_locale.h",
    "runtime/renderer/android/xwalk_permission_client.cc",
    "runtime/renderer/android/xwalk_permission_client.h",
    "runtime/renderer/android/xwalk_render_thread_observer.cc",
    "runtime/renderer/android/xwalk_render_thread_observer.h",
    "runtime/renderer/android/xwalk_render_view_ext.cc",
    "runtime/renderer/android/xwalk_render_view_ext.h",
    "runtime/renderer/isolated_file_system.cc",
    "runtime/renderer/isolated_file_system.h",
    "runtime/renderer/xwalk_content_renderer_client.cc",
    "runtime/renderer/xwalk_content_renderer_client.h",
  ]
  if (!is_android) {
    sources += [
      "runtime/browser/devtools/xwalk_devtools_frontend.cc",
      "runtime/browser/devtools/xwalk_devtools_frontend.h",
      "runtime/browser/runtime_ui_delegate_desktop.cc",
      "runtime/browser/runtime_ui_delegate_desktop.h",
      "runtime/browser/ui/desktop/xwalk_autofill_popup_controller.cc",
      "runtime/browser/ui/desktop/xwalk_autofill_popup_controller.h",
      "runtime/browser/ui/desktop/xwalk_autofill_popup_view.cc",
      "runtime/browser/ui/desktop/xwalk_autofill_popup_view.h",
      "runtime/browser/ui/desktop/xwalk_permission_dialog_manager.cc",
      "runtime/browser/ui/desktop/xwalk_permission_dialog_manager.h",
      "runtime/browser/ui/desktop/xwalk_permission_modal_dialog.cc",
      "runtime/browser/ui/desktop/xwalk_permission_modal_dialog.h",
      "runtime/browser/ui/desktop/xwalk_popup_controller.cc",
      "runtime/browser/ui/desktop/xwalk_popup_controller.h",
      "runtime/browser/ui/native_app_window_desktop.cc",
      "runtime/browser/ui/native_app_window_desktop.h",
      "runtime/browser/xwalk_autofill_client_desktop.cc",
      "runtime/browser/xwalk_autofill_client_desktop.h",
      "runtime/renderer/xwalk_render_thread_observer_generic.cc",
      "runtime/renderer/xwalk_render_thread_observer_generic.h",
    ]
  }
  if (is_linux && !is_component_build && is_component_ffmpeg) {
    # Set RPath for executable xwalk, xwalk_browsertest and xwalk_unittest.
    public_configs = [ "//build/config/gcc:rpath_for_built_shared_libraries" ]
  }

  include_dirs = [ "$root_gen_dir/xwalk" ]
  defines = [
    "CHROME_VERSION=\"$chrome_version\"",
    "XWALK_VERSION=\"$xwalk_version\"",
  ]
  deps = [
    ":generate_upstream_blink_version",
    "//base",
    "//base:base_static",
    "//base:i18n",
    "//base/third_party/dynamic_annotations",
    "//cc",
    "//components/autofill/content/browser",
    "//components/autofill/content/renderer",
    "//components/autofill/core/browser",
    "//components/cdm/renderer",
    "//components/devtools_http_handler",
    "//components/resources:components_resources",
    "//components/strings",
    "//components/url_formatter",
    "//components/user_prefs",
    "//components/visitedlink/browser",
    "//components/visitedlink/renderer",
    "//content",
    "//content/public/app:both",
    "//content/public/browser",
    "//content/public/child",
    "//content/public/common",
    "//content/public/utility",
    "//gin",
    "//ipc",
    "//media",
    "//net",
    "//net:net_resources",
    "//skia",
    "//storage/browser",
    "//storage/common",
    "//third_party/WebKit/public:blink",
    "//third_party/boringssl",
    "//ui/base",
    "//ui/gl",
    "//ui/shell_dialogs",
    "//ui/snapshot",
    "//url",
    "//v8",
    "//xwalk/application:xwalk_application_lib",
    "//xwalk/application:xwalk_application_resources",
    "//xwalk/experimental",
    "//xwalk/extensions",
    "//xwalk/resources:xwalk_pak",
    "//xwalk/resources:xwalk_resources",
    "//xwalk/resources:xwalk_resources_100_percent_pak",
    "//xwalk/resources:xwalk_resources_200_percent_pak",
    "//xwalk/resources:xwalk_resources_300_percent_pak",
    "//xwalk/sysapps",
    "//xwalk/sysapps:xwalk_sysapps_resources",
  ]

  if (is_android) {
    deps += [
      "//components/cdm/browser",
      "//xwalk/runtime/android/core_internal:xwalk_core_jar_jni",
      "//xwalk/runtime/android/core_internal:xwalk_core_native_jni",
    ]
  } else {
    deps += [
      "//xwalk/resources:xwalk_locales",
      "//xwalk/resources:xwalk_strings",
    ]
  }

  if (is_linux) {
    configs += [ "//xwalk/build/libnotify" ]
  }

  if (is_win) {
    libs = [ "runtimeobject.lib" ]
    deps += [ "//base/allocator" ]
  }

  if (disable_bundled_extensions) {
    defines += [ "DISABLE_BUNDLED_EXTENSIONS" ]
  }

  if (enable_nacl) {
    if (is_linux) {
      sources += [
        "runtime/browser/nacl_host/nacl_browser_delegate_impl.cc",
        "runtime/browser/nacl_host/nacl_browser_delegate_impl.h",
      ]
    }
    deps += [
      "//components/nacl/browser",
      "//components/nacl/common",
      "//components/nacl/loader",
      "//components/nacl/loader:nacl_helper",
      "//components/nacl/loader/sandbox_linux",
      "//components/nacl/renderer",
      "//components/nacl/renderer/plugin:nacl_trusted_plugin",
      "//native_client/src/trusted/service_runtime/linux:bootstrap",
    ]
  }

  if (enable_plugins) {
    sources += [
      "//chrome/renderer/pepper/pepper_flash_drm_renderer_host.cc",
      "//chrome/renderer/pepper/pepper_flash_drm_renderer_host.h",
      "//chrome/renderer/pepper/pepper_flash_font_file_host.cc",
      "//chrome/renderer/pepper/pepper_flash_font_file_host.h",
      "//chrome/renderer/pepper/pepper_flash_fullscreen_host.cc",
      "//chrome/renderer/pepper/pepper_flash_fullscreen_host.h",
      "//chrome/renderer/pepper/pepper_flash_menu_host.cc",
      "//chrome/renderer/pepper/pepper_flash_menu_host.h",
      "//chrome/renderer/pepper/pepper_flash_renderer_host.cc",
      "//chrome/renderer/pepper/pepper_flash_renderer_host.h",
      "runtime/browser/renderer_host/pepper/xwalk_browser_pepper_host_factory.cc",
      "runtime/browser/renderer_host/pepper/xwalk_browser_pepper_host_factory.h",
      "runtime/renderer/pepper/pepper_helper.cc",
      "runtime/renderer/pepper/pepper_helper.h",
      "runtime/renderer/pepper/pepper_uma_host.cc",
      "runtime/renderer/pepper/pepper_uma_host.h",
      "runtime/renderer/pepper/xwalk_renderer_pepper_host_factory.cc",
      "runtime/renderer/pepper/xwalk_renderer_pepper_host_factory.h",
    ]
    deps += [
      "//components/pdf/renderer",
      "//ppapi/host",
      "//ppapi/proxy",
      "//ppapi/proxy:ipc",
      "//ppapi/shared_impl",
    ]
  }

  if (toolkit_views) {
    sources += [
      "runtime/browser/ui/desktop/download_views.cc",
      "runtime/browser/ui/desktop/download_views.h",
      "runtime/browser/ui/desktop/exclusive_access_bubble_views.cc",
      "runtime/browser/ui/desktop/exclusive_access_bubble_views.h",
      "runtime/browser/ui/desktop/xwalk_permission_modal_dialog_views.cc",
      "runtime/browser/ui/desktop/xwalk_permission_modal_dialog_views.h",
      "runtime/browser/ui/native_app_window_views.cc",
      "runtime/browser/ui/native_app_window_views.h",
      "runtime/browser/ui/top_view_layout_views.cc",
      "runtime/browser/ui/top_view_layout_views.h",
      "runtime/browser/ui/xwalk_javascript_native_dialog_factory.h",
      "runtime/browser/ui/xwalk_javascript_native_dialog_factory_views.cc",
      "runtime/browser/ui/xwalk_views_delegate.cc",
      "runtime/browser/ui/xwalk_views_delegate.h",
    ]
    deps += [
      "//components/app_modal",
      "//components/constrained_window",
      "//components/guest_view/browser",
      "//components/zoom",
      "//ui/events",
      "//ui/resources",
      "//ui/strings:ui_strings",
      "//ui/views",
      "//ui/views/controls/webview",
    ]
  }

  if (use_aura) {
    sources += [
      "runtime/browser/runtime_platform_util_aura.cc",
      "runtime/browser/ui/color_chooser_aura.cc",
    ]
    deps += [
      "//ui/aura",
      "//ui/base/ime",
      "//ui/wm",
    ]
  }
}

# While we could just call lastchange.py here and generate the header
# directly, it would only work if there is a git checkout (ie. it does
# not work with a tarball, for example).
action("generate_upstream_blink_version") {
  output_file = "$root_gen_dir/blink_upstream_version.h"
  template = "//xwalk/runtime/browser/blink_upstream_version.h.in"
  upstream = "//xwalk/build/UPSTREAM.blink"

  outputs = [
    "$output_file",
  ]
  script = "//build/util/version.py"
  args = [
    "-f",
    rebase_path(upstream, root_out_dir),
    rebase_path(template, root_out_dir),
    rebase_path(output_file, root_out_dir),
  ]
}

group("xwalk_all_tests") {
  testonly = true
  deps = [
    "//xwalk/extensions/test:xwalk_extensions_browsertest",
    "//xwalk/extensions/test:xwalk_extensions_unittest",
    "//xwalk/sysapps:xwalk_sysapps_browsertest",
    "//xwalk/sysapps:xwalk_sysapps_unittest",
    "//xwalk/test:xwalk_browsertest",
    "//xwalk/test:xwalk_unittest",
  ]

  if (is_win) {
    deps += [
      "//xwalk/extensions/test/win:xwalk_dotnet_extensions_browsertest",
      "//xwalk/extensions/test/win:xwalk_dotnet_extensions_unittest",
    ]
  }
}

# Copy xwalk/VERSION to the build directory for tools (such as
# generate_crosswalk_zip.py) that assume all paths are under $root_out_dir.
copy("VERSION") {
  sources = [
    "//xwalk/VERSION",
  ]
  outputs = [
    "$root_out_dir/VERSION",
  ]
}

action("generate_crosswalk_win_zip") {
  # The files and directories will be added with the same names to the
  # generated zip file, with $root_out_dir stripped from the beginning.
  dirs_to_package = [ "$root_out_dir/locales/xwalk" ]
  files_to_package = [
    "$root_out_dir/VERSION",
    "$root_out_dir/d3dcompiler_47.dll",
    "$root_out_dir/icudtl.dat",
    "$root_out_dir/libEGL.dll",
    "$root_out_dir/libGLESv2.dll",
    "$root_out_dir/natives_blob.bin",
    "$root_out_dir/osmesa.dll",
    "$root_out_dir/snapshot_blob.bin",
    "$root_out_dir/xwalk.exe",
    "$root_out_dir/xwalk.pak",
    "$root_out_dir/xwalk_100_percent.pak",
    "$root_out_dir/xwalk_200_percent.pak",
    "$root_out_dir/xwalk_300_percent.pak",
    "$root_out_dir/xwalk_dotnet_bridge.dll",
  ]
  outputs = [
    "$root_out_dir/crosswalk_win.zip",
  ]
  script = "//xwalk/build/win/generate_crosswalk_zip.py"

  _rebased_dirs = rebase_path(dirs_to_package, root_out_dir)
  _rebased_files = rebase_path(files_to_package, root_out_dir)

  args = [
    "--build-dir",
    rebase_path(root_out_dir),
    "--dest",
    rebase_path("$root_out_dir/crosswalk_win.zip"),
    "--dirs=$_rebased_dirs",
    "--files=$_rebased_files",
  ]
  deps = [
    ":VERSION",
    ":xwalk",
    "//xwalk/resources:xwalk_locales",
    "//xwalk/resources:xwalk_pak",
    "//xwalk/resources:xwalk_resources_100_percent_pak",
    "//xwalk/resources:xwalk_resources_200_percent_pak",
    "//xwalk/resources:xwalk_resources_300_percent_pak",
  ]
}
